이메일 인증 확인 api 추가, 스웨거 문서 업데이트
