# api/gateway/src/main/resources/static/openapi3.yaml
@@ -32,7 +32,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-login-946372771'
+                $ref: '#/components/schemas/v1-member-register-946372771'
               examples:
                 '로그인 API - 실패: 로그인 정보':
                   value: "{\"errorCode\":401,\"errorMessage\":\"아이디 또는 비밀번호를 확인해주세\
@@ -46,15 +46,15 @@ paths:
               examples:
                 로그인 API - 성공:
                   value: "{\"code\":200,\"message\":\"정상 처리되었습니다.\",\"data\":{\"accessToken\"\
-                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTc2NTQ5NDcsImV4cCI6MTcxNzY1Njc0Nywicm9sZXMiOiJST0xFX1VTRVIifQ.yCxs1k86N8-L45-Sm-SL_g6jH2SIbuvSv0kFLy2Nzx_DINXvHjKXK9ufJHufwyzaCq2Op94tXOsl7bf7MSh-pQ\"\
-                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTc2NTQ5NDcsImV4cCI6MTcxNzcxNDk0Nywicm9sZXMiOiJST0xFX1VTRVIifQ.QmGUJLPQYqqPlu-RNtAouVoFc0EQkfW6ZRSBU8Wc6F-okMmt5AXmLf7A7nOy_rF_2mqOqV5avGkWRqnRmqbo0Q\"\
+                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTc2NzQzNDgsImV4cCI6MTcxNzY3NjE0OCwicm9sZXMiOiJST0xFX1VTRVIifQ.zQgCynIgHuMzRoJOhvSM8crsqd8iBz7M5pC8N82UzkXvPpcTcOguTJUrYvre1uWIwHP2yqdvFu-0CmqX1gIuLQ\"\
+                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTc2NzQzNDgsImV4cCI6MTcxNzczNDM0OCwicm9sZXMiOiJST0xFX1VTRVIifQ.WmKeIfehEijGe70bpODUL6L4ZaHQ3BjbKLKDvIizRy_Q0zfLB4HE1HDMBXZea7pwFoKOOiWM2mkSbduLCuxiAA\"\
                     }}"
         "400":
           description: "400"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-login-1534697879'
+                $ref: '#/components/schemas/v1-member-register-1534697879'
               examples:
                 '로그인 API - 실패: 필드 유효성':
                   value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
@@ -77,6 +77,10 @@ paths:
                 value: "{\"email\":\"testnaver.com\",\"name\":\"\",\"password\":\"\
                   12345\",\"passwordConfirm\":\"12345\",\"phoneNumber\":\"0101234-5678\"\
                   ,\"birthDate\":\"200011-11\"}"
+              '회원 API - 실패: 이메일 인증 x':
+                value: "{\"email\":\"seongo0521@gmail.com\",\"name\":\"test\",\"password\"\
+                  :\"123456\",\"passwordConfirm\":\"123456\",\"phoneNumber\":\"010-1234-5679\"\
+                  ,\"birthDate\":\"2000-11-11\"}"
               회원 API - 성공:
                 value: "{\"email\":\"test@naver.com\",\"name\":\"test\",\"password\"\
                   :\"123456\",\"passwordConfirm\":\"123456\",\"phoneNumber\":\"010-1234-5678\"\
@@ -91,14 +95,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-login-1534697879'
+                $ref: '#/components/schemas/v1-member-register-1534697879'
               examples:
                 '회원 API - 실패: 필드 유효성':
                   value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
                     .\",\"validation\":{\"password\":\"비밀번호는 최소 6자 이상 입력해주세요.\",\"\
                     passwordConfirm\":\"비밀번호 확인은 최소 6자 이상 입력해주세요.\",\"name\":\"이름은\
-                    \ 2자 이상 50자 이하로 입력해주세요.\",\"birthDate\":\"생년월일을 올바르게 입력해주세요.\"\
-                    ,\"email\":\"유효하지 않은 이메일 형식입니다.\"}}"
+                    \ 필수 항목입니다.\",\"birthDate\":\"생년월일을 올바르게 입력해주세요.\",\"email\":\"\
+                    유효하지 않은 이메일 형식입니다.\"}}"
+                '회원 API - 실패: 이메일 인증 x':
+                  value: "{\"errorCode\":400,\"errorMessage\":\"이메일 인증이 되지 않았습니다.\
+                    \ 이메일 인증 후 다시 시도해 주세요.\"}"
         "201":
           description: "201"
           content:
@@ -114,71 +121,129 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-login-946372771'
+                $ref: '#/components/schemas/v1-member-register-946372771'
               examples:
                 '회원 API - 실패: 중복 회원':
                   value: "{\"errorCode\":409,\"errorMessage\":\"이미 존재하는 회원 이메일입니다\
                     .\"}"
+  /v1/member/email/auth/confirm:
+    post:
+      tags:
+      - 회원 API
+      summary: 이메일 인증 확인
+      description: 이메일 인증 확인
+      operationId: '이메일 인증 확인 API - '
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/v1-member-email-auth-confirm-278006429'
+            examples:
+              '이메일 인증 확인 API - 실패: 인증 코드 불일치':
+                value: "{\"email\":\"seongo0521@gmail.com\",\"authCode\":\"111111\"\
+                  }"
+              '이메일 인증 확인 API - 실패: 인증 코드 요청 필요':
+                value: "{\"email\":\"seongo0521@gmail.com\",\"authCode\":\"111111\"\
+                  }"
+              '이메일 인증 확인 API - 실패: 필드 유효성':
+                value: "{\"email\":\"\",\"authCode\":\"\"}"
+              이메일 인증 확인 API - 성공:
+                value: "{\"email\":\"seongo0521@gmail.com\",\"authCode\":\"111111\"\
+                  }"
+      responses:
+        "401":
+          description: "401"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-register-946372771'
+              examples:
+                '이메일 인증 확인 API - 실패: 인증 코드 불일치':
+                  value: "{\"errorCode\":401,\"errorMessage\":\"인증 코드가 일치하지 않습니다.\"\
+                    }"
+        "400":
+          description: "400"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-register-1534697879'
+              examples:
+                '이메일 인증 확인 API - 실패: 인증 코드 요청 필요':
+                  value: "{\"errorCode\":400,\"errorMessage\":\"이메일 인증 정보가 확인되지 않습\
+                    니다. 확인 후 다시 시도해주세요.\"}"
+                '이메일 인증 확인 API - 실패: 필드 유효성':
+                  value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
+                    .\",\"validation\":{\"authCode\":\"인증 코드는 필수 항목입니다.\",\"email\"\
+                    :\"이메일은 필수 항목입니다.\"}}"
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-auth-confirm1575598845'
+              examples:
+                이메일 인증 확인 API - 성공:
+                  value: "{\"code\":200,\"message\":\"이메일 인증이 정상적으로 처리되었습니다.\"}"
   /v1/member/email/auth/request:
     post:
       tags:
       - 회원 API
-      summary: 이메일 인증 요청
-      description: 이메일 인증 요청
-      operationId: '이메일 인증 요청 API - '
+      summary: 이메일 인증 코드 요청
+      description: 이메일 인증 코드 요청
+      operationId: '이메일 인증 코드 요청 API - '
       requestBody:
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/v1-member-email-auth-request371889986'
             examples:
-              이메일 인증 요청 API - 성공:
-                value: "{\"email\":\"seongo0521@gmail.com\"}"
-              '이메일 인증 요청 API - 실패: 이미 등록 된 이메일':
-                value: "{\"email\":\"test@naver.com\"}"
-              '이메일 인증 요청 API - 실패: 이메일 서버 이슈':
-                value: "{\"email\":\"seongo0521@gmail.com\"}"
-              '이메일 인증 요청 API - 실패: 필드 유효성':
+              '이메일 인증 코드 요청 API - 실패: 필드 유효성':
                 value: "{\"email\":\"\"}"
+              이메일 인증 코드 요청 API - 성공:
+                value: "{\"email\":\"seongo0521@gmail.com\"}"
+              '이메일 인증 코드 요청 API - 실패: 이메일 서버 이슈':
+                value: "{\"email\":\"seongo0521@gmail.com\"}"
+              '이메일 인증 코드 요청 API - 실패: 이미 등록 된 이메일':
+                value: "{\"email\":\"test@naver.com\"}"
       responses:
-        "200":
-          description: "200"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/v1-member-email-auth-request1575598845'
-              examples:
-                이메일 인증 요청 API - 성공:
-                  value: "{\"code\":200,\"message\":\"인증 메일이 정상적으로 발송되었습니다.\"}"
-        "409":
-          description: "409"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/v1-member-login-946372771'
-              examples:
-                '이메일 인증 요청 API - 실패: 이미 등록 된 이메일':
-                  value: "{\"errorCode\":409,\"errorMessage\":\"이미 존재하는 회원 이메일입니다\
-                    .\"}"
-        "504":
-          description: "504"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/v1-member-login-946372771'
-              examples:
-                '이메일 인증 요청 API - 실패: 이메일 서버 이슈':
-                  value: "{\"errorCode\":504,\"errorMessage\":\"이메일 전송에 실패했습니다.\"}"
         "400":
           description: "400"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-login-1534697879'
+                $ref: '#/components/schemas/v1-member-register-1534697879'
               examples:
-                '이메일 인증 요청 API - 실패: 필드 유효성':
+                '이메일 인증 코드 요청 API - 실패: 필드 유효성':
                   value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
                     .\",\"validation\":{\"email\":\"유효하지 않은 이메일 형식입니다.\"}}"
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-auth-confirm1575598845'
+              examples:
+                이메일 인증 코드 요청 API - 성공:
+                  value: "{\"code\":200,\"message\":\"인증 메일이 정상적으로 발송되었습니다.\"}"
+        "504":
+          description: "504"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-register-946372771'
+              examples:
+                '이메일 인증 코드 요청 API - 실패: 이메일 서버 이슈':
+                  value: "{\"errorCode\":504,\"errorMessage\":\"이메일 전송에 실패했습니다.\"}"
+        "409":
+          description: "409"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-register-946372771'
+              examples:
+                '이메일 인증 코드 요청 API - 실패: 이미 등록 된 이메일':
+                  value: "{\"errorCode\":409,\"errorMessage\":\"이미 존재하는 회원 이메일입니다\
+                    .\"}"
 components:
   schemas:
     v1-member-login1698192666:
@@ -199,7 +264,7 @@ components:
         message:
           type: string
           description: 상태 메시지
-    v1-member-email-auth-request1575598845:
+    v1-member-email-auth-confirm1575598845:
       type: object
       properties:
         code:
@@ -250,7 +315,7 @@ components:
         email:
           type: string
           description: 이메일(계정)
-    v1-member-login-946372771:
+    v1-member-register-946372771:
       type: object
       properties:
         errorMessage:
@@ -259,16 +324,16 @@ components:
         errorCode:
           type: number
           description: 상태 코드
-    v1-member-login965174184:
+    v1-member-email-auth-confirm-278006429:
       type: object
       properties:
-        password:
+        authCode:
           type: string
-          description: 패스워드
+          description: 인증 코드
         email:
           type: string
           description: 이메일(계정)
-    v1-member-login-1534697879:
+    v1-member-register-1534697879:
       type: object
       properties:
         errorMessage:
@@ -280,3 +345,12 @@ components:
         validation:
           type: object
           description: 유효하지 않은 필드
+    v1-member-login965174184:
+      type: object
+      properties:
+        password:
+          type: string
+          description: 패스워드
+        email:
+          type: string
+          description: 이메일(계정)
