# api/member/src/main/java/com/climbingday/member/controller/MemberController.java
@@ -11,6 +11,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.climbingday.dto.member.EmailAuthDto;
+import com.climbingday.dto.member.EmailDto;
 import com.climbingday.dto.member.MemberLoginDto;
 import com.climbingday.dto.member.MemberRegisterDto;
 import com.climbingday.member.service.MemberService;
@@ -25,6 +26,9 @@ import lombok.RequiredArgsConstructor;
 public class MemberController {
 	private final MemberService memberService;
 
+	/**
+	 * 회원 가입
+	 */
 	@PostMapping("/register")
 	public ResponseEntity<CDResponse<?>> registerMember(
 		@Valid @RequestBody MemberRegisterDto reqMemberDto) {
@@ -32,6 +36,9 @@ public class MemberController {
 			.body(new CDResponse<>(CREATE, Map.of("id", memberService.registerMember(reqMemberDto))));
 	}
 
+	/**
+	 * 로그인
+	 */
 	@PostMapping("/login")
 	public ResponseEntity<CDResponse<?>> login(
 		@Valid @RequestBody MemberLoginDto memberLoginDto) {
@@ -39,12 +46,26 @@ public class MemberController {
 			.body(new CDResponse<>(memberService.login(memberLoginDto)));
 	}
 
+	/**
+	 * 이메일 인증 코드 요청
+	 */
 	@PostMapping("/email/auth/request")
 	public ResponseEntity<CDResponse<?>> emailAuthRequest(
-		@RequestBody @Valid EmailAuthDto emailAuthDto) {
-		memberService.emailAuth(emailAuthDto);
+		@RequestBody @Valid EmailDto emailDto) {
+		memberService.emailAuth(emailDto);
 
 		return ResponseEntity.status(EMAIL_SEND_SUCCESS.getStatus())
 			.body(new CDResponse<>(EMAIL_SEND_SUCCESS));
+	}
+
+	/**
+	 * 이메일 인증 코드 확인
+	 */
+	@PostMapping("/email/auth/confirm")
+	public ResponseEntity<CDResponse<?>> emailAuthConfirm(
+		@RequestBody @Valid EmailAuthDto emailAuthDto) {
+		memberService.emailAuthConfirm(emailAuthDto);
+		return ResponseEntity.status(EMAIL_AUTH_CONFIRM.getStatus())
+			.body(new CDResponse<>(EMAIL_AUTH_CONFIRM));
 	}
 }
