# common/src/main/java/com/climbingday/dto/member/EmailDto.java
@@ -11,11 +11,8 @@ import lombok.NoArgsConstructor;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class EmailAuthDto {
+public class EmailDto {
 	@Pattern(regexp = "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,6}$", message = "유효하지 않은 이메일 형식입니다.")
 	@NotBlank(message = "이메일은 필수 항목입니다.")
 	private String email;
-
-	@NotBlank(message = "인증 코드는 필수 항목입니다.")
-	private String authCode;
 }
